--- a/app/src/main/res/layout/recycler_item_app.xml
+++ b/app/src/main/res/layout/recycler_item_app.xml
@@ -6,10 +6,14 @@
     android:id="@+id/element_app_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    card_view:cardCornerRadius="@dimen/radius_corner_card">
+    android:layout_marginBottom="@dimen/margin_app"
+    android:layout_marginStart="@dimen/margin_app"
+    android:layout_marginLeft="@dimen/margin_app"
+    android:layout_marginEnd="@dimen/margin_app"
+    android:layout_marginRight="@dimen/margin_app"
+    card_view:cardCornerRadius="@dimen/radius_corner_card"
+    android:foreground="?attr/selectableItemBackground"
+    android:stateListAnimator="@animator/raise">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,15 +23,22 @@
             android:id="@+id/element_app_icon"
             android:layout_width="@dimen/width_app_icon"
             android:layout_height="@dimen/width_app_icon"
-            android:layout_margin="8dp" />
+            android:layout_margin="8dp"
+            tools:ignore="contentDescription"/>
 
         <TextView
             android:id="@+id/element_app_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
+            android:layout_toEndOf="@+id/element_app_icon"
             android:layout_toRightOf="@+id/element_app_icon"
+            android:layout_toStartOf="@+id/element_app_hide"
+            android:layout_toLeftOf="@+id/element_app_hide"
+            android:maxLines="1"
+            android:ellipsize="end"
             tools:text="AppName"
             android:textStyle="bold" />
 
@@ -36,18 +47,24 @@
             android:layout_width="@dimen/width_app_icon"
             android:layout_height="@dimen/height_app_action_button"
             android:scaleType="centerInside"
+            android:layout_toStartOf="@+id/element_app_menu"
             android:layout_toLeftOf="@+id/element_app_menu"
             android:src="@drawable/ic_visibility_grey_24dp"
-            android:background="?attr/selectableItemBackground" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            tools:ignore="contentDescription"
+            android:tint="@color/colorAppTint"/>
 
         <ImageView
             android:id="@+id/element_app_menu"
             android:layout_width="@dimen/width_app_icon"
             android:layout_height="@dimen/height_app_action_button"
             android:scaleType="centerInside"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_more_vert_grey_24dp"
-            android:background="?attr/selectableItemBackground" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            tools:ignore="contentDescription"
+            android:tint="@color/colorAppTint"/>
 
     </RelativeLayout>
 
