--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="colorDivider">#DDDDDD</color>
     <color name="colorValue">@color/colorBlack</color>
     <color name="colorShadow">#80000000</color>
+    <color name="colorCircles">@color/colorBlack</color>
+    <color name="colorAppTint">@color/colorBlack</color>
 
 </resources>
