--- a/app/src/main/res/layout/fragment_apps.xml
+++ b/app/src/main/res/layout/fragment_apps.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -10,7 +9,12 @@
         android:id="@+id/recycler_apps"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="88dp"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="80dp"
+        android:paddingStart="@dimen/activity_horizontal_margin_apps"
+        android:paddingLeft="@dimen/activity_horizontal_margin_apps"
+        android:paddingEnd="@dimen/activity_horizontal_margin_apps"
+        android:paddingRight="@dimen/activity_horizontal_margin_apps"
         android:clipToPadding="false"
         android:visibility="invisible"/>
 
