--- a/app/src/main/res/layout/fragment_lens.xml
+++ b/app/src/main/res/layout/fragment_lens.xml
@@ -50,11 +50,18 @@
 
             </RelativeLayout>
 
-            <android.support.v7.widget.AppCompatSeekBar
-                android:id="@+id/seek_bar_min_icon_size"
+            <RelativeLayout
+                android:id="@+id/seek_bar_min_icon_size_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seek_bar_min_icon_size"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp" />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -78,11 +85,18 @@
 
             </RelativeLayout>
 
-            <android.support.v7.widget.AppCompatSeekBar
-                android:id="@+id/seek_bar_distortion_factor"
+            <RelativeLayout
+                android:id="@+id/seek_bar_distortion_factor_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seek_bar_distortion_factor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp" />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -106,11 +120,18 @@
 
             </RelativeLayout>
 
-            <android.support.v7.widget.AppCompatSeekBar
-                android:id="@+id/seek_bar_scale_factor"
+            <RelativeLayout
+                android:id="@+id/seek_bar_scale_factor_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seek_bar_scale_factor"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp" />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -134,11 +155,18 @@
 
             </RelativeLayout>
 
-            <android.support.v7.widget.AppCompatSeekBar
-                android:id="@+id/seek_bar_animation_time"
+            <RelativeLayout
+                android:id="@+id/seek_bar_animation_time_parent"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.AppCompatSeekBar
+                    android:id="@+id/seek_bar_animation_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp" />
+
+            </RelativeLayout>
 
         </LinearLayout>
 
